<resources>
    <string name="app_name">Core Death Bell</string>
    <string name="notification_non_core_block_title">Non-Core (BU and/or Classic) block mined</string>
    <string name="button_visit_external_site">Recent block vote distribution</string>
    <string name="button_donate">Support this app - donate coinz ;-)</string>
    <string name="button_settings">Notification settings</string>

    <string name="pref_title_notification_sound">Notification sound</string>

    <string name="pref_notification_sound_value_bell">Bell</string>
    <string name="pref_notification_sound_value_default">Default</string>
    <string name="pref_notification_sound_value_silent">Silent</string>
    <string name="title_activity_settings">Settings</string>
    <string name="notification_play_services_not_available_title">Google Play Services are not available</string>
    <string name="notification_play_services_not_available_text">CoreDeathBell needs a current version of Google Play Services to run.</string>
    <string name="notification_play_services_not_available_action_fix_it">Fix it</string>
    <string name="app_about_info_text">CoreDeathBell is licensed under LGPL 3.0 and available on github under https://github.com/lambdasoup/coredeathbell</string>
    <string name="about_cc_title">CreativeCommons Attributions</string>
    <string name="about_cc_text">Thanks go to juskiddink for the bell sound (https://www.freesound.org/people/juskiddink/sounds/74920/), used under CC BY 3.0 (https://creativecommons.org/licenses/by/3.0/).</string>
    <string name="title_activity_about">About CoreDeathBell</string>
    <string name="action_about">About</string>
    <string name="about_play_services_title">Licenses for included libraries</string>
    <string name="main_title">Another Non-Core block mined - YAY!</string>
    <string name="no_bitcoin_client">No Bitcoin client found. Please scan the QR code.</string>
    <string name="pls_donate">Happy about it? Donate some coins!</string>
    <string name="notification_text">Big Block vote stats: %1$.1f%% (24h),  %2$.1f%% (7d)</string>
</resources>
