<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.lambdasoup.coredeathbell.AboutActivity">

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/app_about_info_text"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_block_sep" />

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_cc_title"/>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_title_sep" />
    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/about_cc_text"/>


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_block_sep" />

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_play_services_title"/>
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_title_sep" />
    <TextView
        android:id="@+id/text_play_services_license_text"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"/>

</LinearLayout>
</ScrollView>